workspace = { members = ["drive", "fs"] }
[package]
name = "filestik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "*"
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
actix-web = "4"
drive_manager = {path = "drive"}
