[package]
name = "drive_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "5.0.4"
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
url = "2.5.0"
futures = "0.3.30"
async-recursion = "1.0.5"
fs = {path = "../fs"}
redis-macros = "0.2.1"
redis = "0.25.1"
chrono = "0.4.35"
serde_as = "0.0.1"
