[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "5.0.4"
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "0.6"
mtzip = "1.2.0"
walkdir = "2.3.2"
pdfshrink = "0.2.0"
csv = "1.3.0"
dashmap = "5.5.3"
futures = "0.3.30"
chrono = "0.4.35"
redis = "0.25.1"
redis-macros = "0.2.1"
derive_more = "0.99.17"
